--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -7,9 +7,11 @@
   place-content: center;
   grid-template-columns: repeat(auto-fit, 100px);
   grid-auto-rows: 100px;
-  margin-top: 4rem;
+  margin: 4rem;
   @media (max-width: 900px) {
     padding: 2rem;
+    margin: 1rem;
+    grid-gap: 4rem;
   }
 
   img {
