--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -26,6 +26,7 @@ html {
 body {
   font-size: 1.6em;
   text-align: center;
+  color: $grey_600;
 }
 
 a {
